crates/toml/tests/snapshots/invalid/table/empty.stderr
TOML parse error at line 1, column 2
  |
1 | []
  |  ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
